2002-11-21  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess.long: updated script so it will properly find the
	version number of the new Itanium 2 machines running "Red Hat
	Linux Advanced Workstation release 2.1AW (Derry)".  The script now
	will report ia64-unknown-linux-rh2.1AW.

2002-11-20  Ion Badulescu  <ionut@moisil.badula.org>

	* amfs_auto_bgmount(): almost complete rewrite

	* fixed amfs_inherit to do the right thing and not dereference
	freed mntfs'es

	* #if 0'ed bogus code in fh_to_mp3() -- it is now done properly in
	amfs_autofs_lookup_child()

	* release the autofs_fh only in one place

	* remove the mountpoint only if mf_refc == 1

	* print the mntfs type in free_mntfs()

	* new pseudo-mount option 'sftlookup' which causes lookups to
	mounted shares from downed servers to return EIO; the default
	depends on whether the mount is 'hard' or 'soft'

	* improved querying of supported NFS versions on the server --
	don't even try if it's known to be down

	* solaris autofs mount code moved to transp_{sockets,tli}.c

	* incipient (non-functional) AIX autofs support 

2002-11-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* doc/am-utils.texi (Keep-alives): removed outdated info about not
	maintaining the state of TCP NFS servers

2002-11-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* include/am_utils.h: prototype for ops_search()

	* amd/am_ops.c (ops_search): new function for searching the right
	set of ops for a given filesystem type

	* amd/restart.c (restart): cleanup and split into two functions in
	preparation for handling the restart of amd's own mount points
	(restart_fake_mntfs): new function, factored out from restart()

2002-11-04  Ion Badulescu  <ionut@buggy.badula.org>

	* amd/ops_cdfs.c (mount_cdfs): remove special code for loop device
	(cdfs_umount): ditto

	* conf/mount/mount_linux.c (mount_linux): factor it out to
	mount_linux_nfs() and mount_linux_nonfs()
	(mount_linux_nonfs): generalize loop device support to all