@@ -19,8 +19,13 @@ noinst_HEADERS = amd.h
 # which will not generate the .h needs for the lex file from the yacc file.
 # I took out the conf .y/.l files b/c of bad interaction between bsd44 make
 # and automake-1.2 rules.
+
+# sources needed: note .y and .l files have to be first
 # get_args.c is handled separately
 amd_SOURCES =			\
+	conf_parse.y		\
+	conf_tok.l		\
+	\
 	am_ops.c		\
 	amd.c			\
 	amfs_auto.c		\
@@ -87,27 +92,29 @@ EXTRA_amd_SOURCES =	\
 # filesystem types this system supports.
 # AMD_INFO_OBJS: a list of info_*.o objects added, depending on which map
 # types this system supports.
-EXTRA_amd_OBJECTS = @AMD_FS_OBJS@ @AMD_INFO_OBJS@ conf_tok.o conf_parse.o
+EXTRA_amd_OBJECTS = @AMD_FS_OBJS@ @AMD_INFO_OBJS@
 LDADD = $(EXTRA_amd_OBJECTS) get_args.o ../libamu/libamu.la
 # must manually add f/lex library to LIBS, and not to LDADD.
 LIBS = @LIBS@ @LEXLIB@
 
 # additional files to distribute and clean
-EXTRA_DIST = conf_tok.l conf_parse.y ops_TEMPLATE.c $(man_MANS) $(TESTS)
+EXTRA_DIST = ops_TEMPLATE.c $(man_MANS) $(TESTS)
 CLEANFILES = conf_tok.c conf_parse.c conf_parse.h
 DISTCLEANFILES = build_version.h
+
+# do not distribute files that should be generated by lex/yacc locally
+dist-hook:
+	(cd $(distdir) && rm -f conf_parse.c conf_parse.h conf_tok.c)
 
 INCLUDES = -I$(top_srcdir)/include
 
 # allow users to add their own flags via "configure --enable-am-flags=ARG"
 AMU_CFLAGS = @AMU_CFLAGS@
 CFLAGS = @CFLAGS@ $(AMU_CFLAGS)
-YACC = @YACC@
-YFLAGS = -d
+AM_YFLAGS = -d
 
 # dependencies
 $(PROGRAMS): $(LDADD)
-conf_tok.o: conf_parse.h
 get_args.o: build_version.h
 $(amd_OBJECTS) $(EXTRA_amd_OBJECTS):		\
 	../config.h				\
@@ -119,18 +126,6 @@ $(amd_OBJECTS) $(EXTRA_amd_OBJECTS):		\
 	$(top_srcdir)/include/amq_defs.h	\
 	@AMU_NFS_PROT_HEADER@			\
 	$(noinst_HEADERS)
-
-# Must use my rules, b/c ones supplied by automake-1.2 don't work
-# with bsd44 make (they have built-in rules to build yacc/lex files).
-# Code generated by yacc/lex:
-conf_tok.c: $(srcdir)/conf_tok.l
-	$(LEX) $?
-	mv lex.yy.c conf_tok.c
-
-conf_parse.c conf_parse.h: $(srcdir)/conf_parse.y
-	$(YACC) -d $?
-	mv y.tab.c conf_parse.c
-	mv y.tab.h conf_parse.h
 
 # auto-generate build number
 build_version.h: $(OBJECTS) $(EXTRA_amd_OBJECTS) get_args.c
